--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Overflow 1.1 by HTML5 UP
 	html5up.net | @n33co
@@ -27,8 +27,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1>CloudMania</h1>
+					<p>By <a href="/next">{{firstname}} {{lastname}}</a></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
