--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 				</footer>
 			</section>
 		
-		<!-- Banner -->
-			<section id="banner">
+		<!-- Register -->
+			<section id="register">
 				<header>
 					<h2>Register Yourself</h2>
 				</header>
-				<form>
+				<form action="/" method="post">
 					<div class="row half">
-						<div class="4u"><input type="text" class="text" name="email" placeholder="Email" /><br></div>
-						<div class="4u"><input type="password" class="text" name="password" placeholder="Password" /><br></div>
-						<div class="4u"><input type="password" class="text" name="confirmpassword" placeholder="Confirm Password" /></div>
+						<div class="4u"><input type="text" name="email" placeholder="Email" /><br></div>
+						<div class="4u"><input type="password" name="password" placeholder="Password" /><br></div>
+						<div class="4u"><input type="password" name="confirm password" placeholder="Confirm Password" /></div>
 						
 					</div>
 					<a href="#" class="button">Done</a>
