--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 	Overflow 1.1 by HTML5 UP
 	html5up.net | @n33co
@@ -6,32 +6,32 @@
 -->
 <html>
 	<head>
-		<title>CloudMania</title>
+		<title>Overflow by HTML5 UP</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
-		<!--[if lte IE 8]><script src="/css/ie/html5shiv.js"></script><![endif]-->
-		<script src="/js/jquery.min.js"></script>
-		<script src="/js/jquery.poptrox.min.js"></script>
-		<script src="/js/skel.min.js"></script>
-		<script src="/js/init.js"></script>
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.poptrox.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="/css/skel-noscript.css" />
-			<link rel="stylesheet" href="/css/style.css" />
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
 
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>CloudMania</h1>
-					<p>By <a href="/next">{{firstname}} {{lastname}}</a></p>
+					<h1>Cloud Mania</h1>
+					<p>By Shivani Sharma</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Let's get Started!!</a>
+					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
 				</footer>
 			</section>
 		
@@ -47,7 +47,6 @@
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
 				</footer>
 			</section>
-				
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
