--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<header>
 					<h2>Deploy your Static Website in seconds</h2>
 				</header>
-				<p>CloudMania, a brilliant, simple solution for those looking for a light CMS which runs out of your Dropbox</p>
+				<p>CloudMania, a brilliant, simple solution for those looking for a light CMS which runs out of your Dropbox. This is an easy design to deploy any static website that could easy for non-technical person.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Take Tour and Register!!</a>
 				</footer>
