--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>Takes just your<br />
+						Few seconds to set up</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<p>Register to CloudMania, Login your Dropbox Account than Simply take your existing HTML website, specify the editable areas then copy it to Dropbox. You now have a live website with a CMS your client use.</p>
 				</div>
 			</article>
 		
@@ -80,10 +80,13 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>Features</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p>No programming required<br>
+					Complete Design Freedom<br>
+					Unlimited Scalability<br>
+					Nothing to install or maintain<br>
+					and many more...</p>
 				</div>
 			</article>
 		
@@ -305,7 +308,6 @@
 			<div class="copyright">
 				<ul class="menu">
 					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
