--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="js/jquery.min.js" type="text/javascript"></script>
+		<script src="js/jquery.poptrox.min.js" type="text/javascript"></script>
+		<script src="js/skel.min.js" type="text/javascript"></script>
+		<script src="js/init.js" type="text/javascript"></script>
 		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/skel-noscript.css" type="text/css" />
+			<link rel="stylesheet" href="css/style.css" type="text/css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" type="text/css" /><![endif]-->
 	</head>
 	<body>
 
