--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <script>
         	alreadyRegistered();
         </script>
+		{% if forgot %}
+		<form action="/forgot" method="post">
+	  	  <div><input type="text" class="text" name="email" placeholder="Email"></div>
+	          <div><input type="password" class="text" name="password" placeholder="Password"></div>
+	          <div><input type="password" class="text" name="confirmpassword" placeholder="Confirm Password"></div>
+	          <input type="submit" class="button style2" value="Confirm" name="confirm" />
+	        </form>
+		{% end if %}
         {% endif %}
       </section>
 		
@@ -87,29 +95,6 @@
 					Unlimited Scalability<br>
 					Nothing to install or maintain<br>
 					and many more...</p>
-				</div>
-			</article>
-		
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row flush">
-						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
 				</div>
 			</article>
 		
