--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         	<h2>Welcome, {{user}}</h2>
 		<br>
 		<input type="button" class="button style2" value="Add Site" name="addsite" />
-		<input type="button" class="button style2" value="Change Password" name="settings" />
+		<a href="/settings"><input type="button" class="button style2" value="Change Password" name="settings" /></a>
 		{% if settings %}
 			<form action="/settings#banner" method="post">
 			  <div><input type="password" class="text" name="password" placeholder="Password"></div>
