--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	  <input type="submit" class="button style2" value="Reset Password" name="reset" />
 	</form>
 		{% else %}
-		<form action="/change" method="post">
+		<form action="/reset" method="post">
 		  <div><input type="password" class="text" name="password" placeholder="Password"></div>
 		  <div><input type="password" class="text" name="confirmpassword" placeholder="Confirm Password"></div>
 		  <input type="button" class="button style2" value="Change Password" name="changepassword" />
