--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </form>
 		{% else %}
 		{% if not changepassword and not addsite %}	
-        	<h2>Welcome, {{user}}</h2>
+        	<h2>Hello, {{user}}</h2>
 		<br>
 		<a class="button style2" href="/addsite">Add Site</a>
 		<a class="button style2" href="/changepassword">Change Password</a>
