--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
         </form>
 		{% else %}
 		{% if not changepassword and not addsite %}
-        	<h2>Welcome, {{user}}</h2>
+        	<h2>Welcome, {{user.email}}</h2>
 		<br>
+        <div>
+            <h2>List of sites:</h2><ol>
+            {% for sitename, siteid in sites %}
+            <li>{{sitename}} - <a href="/u/{{siteid}}/index.html">{{siteid}}</a></li>
+            {% endfor %}
+            </ol>
+        </div>
         {% if is_connected %}
 		<a class="button style2" href="/addsite#banner">Add Site</a>
         {% endif %}
