--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 				</div>
 			</article>
 		{% endif %}
+		{% if contact %}
 		<!-- Contact -->
+		<section id="contactus">
 			<article class="container box style3">
 				<header>
 					<h2>Contact us !! </h2>
@@ -196,7 +198,7 @@
 					</div>
 				</form>
 			</article>
-
+		{% endif %}
 		<!-- Generic -->
 		<!--
 			<article class="container box style3">
